square colours not showing fixed

--- a/game/src/App.css
+++ b/game/src/App.css
@@ -24,7 +24,7 @@
   background-color: #eeeed5;
 }
 
-.light-sqaure-highlighted {
+.light-square-highlighted {
   background-color: #F7F76B;
 }
 
